# NdkSample

./: settings.gradle
app/: build.gradle
app/jniLibs/number/include/: number-utils.h
app/src/androidTest/java/com/warrocker/ndksample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  number-utils.cpp
app/src/main/cpp/string-utils/: CMakeLists.txt  string-utils.c
app/src/main/java/com/warrocker/ndksample/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/warrocker/ndksample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
